--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -399,10 +399,13 @@ Navbar Area
                 }
                 .dropdown-menu {
                     border: none;
-                    border-top: 3px solid $main-color;
                     padding: 0;
                     border-radius: 0;
                     background-color: $color-white !important;
+                    border-radius: 4px;
+                    border-top-right-radius:0;
+                    border-top-left-radius:0;
+
                     li {
                         border-bottom: 1px solid $color-white;
                         &:last-child {
@@ -422,8 +425,8 @@ Navbar Area
                             }
                             &:hover, :focus, .active{
                                 color: $main-color !important;
-                                margin-left: 5px;
-                                border-radius: .25rem;
+                                // margin-left: 5px;
+                                // border-radius: .25rem;
                             }
                         }
                         &.active{
@@ -7277,4 +7280,47 @@ top: 10px;
 .sub-loc{
     font-family: Lustria,Georgia,"Times New Roman",Times,serif;
     font-size: 14px;
+}
+
+.whats-app{
+    width: 40px;
+    height: 45px;
+    background: #3498db;
+    position: fixed;
+    top: 50%;
+    right: 0;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    padding: 10px 5px;
+    font-weight: 700;
+    margin-left: 5px;
+    font-size: 16px;
+
+    a{
+      visibility: hidden;
+      opacity: 0;
+    }
+    &.email-img{
+        background: #ea2e30;
+        top: 57%;
+    }
+    &:hover{
+        width: 220px;
+        transition: all .25s ease;
+        a{
+            visibility: visible;
+            margin-left: 10px;
+            color: #fff;
+            opacity: 1;
+            font-size: 14px;
+            font-weight: 700;
+            margin-left: 5px;
+        }
+    }
+}
+
+.mean-menu{
+    position: relative;
+    left: 13px;
 }
