--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5929,6 +5929,7 @@ Footer Area
     padding: 16px 0px;
     background: #282828!important;
     font-family: Roboto,sans-serif!important;
+    min-height: 325px;
 }
 .footer-top {
     border-bottom: 1px solid #e6e6e6;
@@ -6446,8 +6447,8 @@ Back To Top Button
 .top-btn {
     background: #002e5b;
     color: $color-white;
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     box-shadow: #002e5b;
     font-size: 20px;
