--- a/assets/css/meanmenu.css
+++ b/assets/css/meanmenu.css
@@ -196,7 +196,7 @@
             box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.05);
     background: #0d1028;
     position: absolute;
-    top: 80px;
+    /* top: 80px; */
     left: -6px;
     width: 250px;
     z-index: 99;
@@ -264,7 +264,8 @@
 .main-nav nav .navbar-nav .nav-item:hover ul {
     opacity: 1;
     visibility: visible;
-    top: 100%;
+    top: 120%;
+    /* display: none; */
 }
 .main-nav nav .navbar-nav .nav-item:last-child .dropdown-menu {
     left: auto;
