--- a/assets/css/meanmenu.css
+++ b/assets/css/meanmenu.css
@@ -180,7 +180,7 @@
     font-family: Roboto,sans-serif!important;
     font-size: 16px!important;
     letter-spacing: .5px !important;
-    line-height: 24px;
+    line-height: 40px;
     font-weight: 400!important;
 }
 .main-nav nav .navbar-nav .nav-item a:hover, 
@@ -196,19 +196,18 @@
             box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.05);
     background: #0d1028;
     position: absolute;
-    /* top: 80px; */
-    left: -6px;
-    width: 250px;
+    top: 120%;
+    left: 2px;
+    width: 260px;
     z-index: 99;
     display: block;
-    padding-top: 20px;
+    padding-top: 0px;
     padding-left: 5px;
     padding-right: 5px;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
     opacity: 0;
     visibility: hidden;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+    transition: visibility .35s ease-in-out,opacity .35s ease-in-out,top .35s ease-in-out,bottom .35s ease-in-out,left .35s ease-in-out,right .35s ease-in-out;
 }
 .main-nav nav .navbar-nav .nav-item .dropdown-menu li {
     position: relative;
@@ -264,7 +263,7 @@
 .main-nav nav .navbar-nav .nav-item:hover ul {
     opacity: 1;
     visibility: visible;
-    top: 120%;
+    /* top: 130%; */
     /* display: none; */
 }
 .main-nav nav .navbar-nav .nav-item:last-child .dropdown-menu {
