--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6475,6 +6475,7 @@ Back To Top Button
 	cursor: pointer;
     display: none;
     z-index: 9999;
+    bottom: 45px;
 } 
 .top-btn {
     background: #002e5b;
