--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7318,10 +7318,8 @@ top: 10px;
 
 .whats-app{
     width: 40px;
-    height: 45px;
     background: #3498db;
     position: fixed;
-    top: 50%;
     right: 0;
     z-index: 9999;
     display: flex;
@@ -7330,14 +7328,15 @@ top: 10px;
     font-weight: 700;
     margin-left: 5px;
     font-size: 16px;
-
+    top: 278px;
+    height: 38px;
     a{
       visibility: hidden;
       opacity: 0;
     }
     &.email-img{
         background: #ea2e30;
-        top: 57%;
+        top: 319px!important;
     }
     &:hover{
         width: 220px;
